fix(jdk17): replace Java 21 List.getLast() introduced by descending-scan perf commit
TimeSeriesShard.queryDescending gained a second List<Object[]>.getLast() call
(Java 21+) when merged with the prior chunk's getLast()->get(size()-1) fix.
Replaced to keep the java17 branch on maven-compiler-plugin release 17.